Ingress/Ingress2.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: v-cluster
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: nginx:latest
    ports:
      - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  namespace: v-cluster
  name: myapp-service
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: v-cluster
  name: myingress
  labels:
    name: myingress
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp-service
            port: 
              number: 80
